--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "express-gen-ts",
   "version": "0.0.0",
   "scripts": {
-    "build": "npx ts-node build.ts",
+    "build": "npx tsc",
     "lint": "npx eslint --ext .ts src/",
     "lint:tests": "npx eslint --ext .ts spec/",
-    "start": "node -r module-alias/register ./dist --env=production",
+    "start": "node -r tsconfig-paths/register -r module-alias/register ./dist/src/index.js --env=production",
     "dev": "nodemon",
-    "test": "nodemon --config ./spec/nodemon.json",
+    "test": "npx jest",
     "test:no-reloading": "npx ts-node --files -r tsconfig-paths/register ./spec"
   },
   "nodemonConfig": {
@@ -21,7 +21,8 @@
     "exec": "./node_modules/.bin/ts-node --files -r tsconfig-paths/register ./src"
   },
   "_moduleAliases": {
-    "@src": "dist"
+    "@src": "dist",
+    "@models": "dist/models"
   },
   "engines": {
     "node": ">=8.10.0"
@@ -45,7 +46,8 @@
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
-    "ts-command-line-args": "^2.5.1"
+    "ts-command-line-args": "^2.5.1",
+    "tsc-alias": "^1.8.10"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
@@ -53,6 +55,7 @@
     "@types/find": "^0.2.4",
     "@types/fs-extra": "^11.0.4",
     "@types/jasmine": "^5.1.4",
+    "@types/jest": "^29.5.14",
     "@types/jsonfile": "^6.1.4",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.7",
@@ -64,8 +67,10 @@
     "find": "^0.3.0",
     "fs-extra": "^11.2.0",
     "jasmine": "^5.1.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "supertest": "^6.3.4",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5"
