--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,70 +1,83 @@
 name: Run Tests and Push Docker Image
- 
+
 on:
   pull_request:
     branches:
       - Dev
       - QA
-      - master
+      - main
   push:
     branches:
       - Dev
       - QA
-      - master
- 
- 
+      - main
+
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
- 
 jobs:
   test:
     runs-on: ubuntu-latest
- 
+
     steps:
+      # Paso 1: Clonar el repositorio
       - name: Checkout repository
         uses: actions/checkout@v3
- 
+
+      # Paso 2: Configurar Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
- 
+
+      # Paso 3: Instalar dependencias
       - name: Install dependencies
         run: npm install
- 
+
+      # Paso 4: Asegurar permisos de Jest
+      - name: Ensure Jest is executable
+        run: chmod +x ./node_modules/.bin/jest
+
+      # Paso 5: Ejecutar pruebas
       - name: Run Tests
-        run: npm run test -- --watch=false --browsers=ChromeHeadless
+        run: npx jest
+  
   build:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
       id-token: write
+
     steps:
+      # Paso 1: Clonar el repositorio
       - name: Checkout repository
-        uses: actions/checkout@v4
- 
- 
+        uses: actions/checkout@v3
+
+      # Paso 2: Configurar Docker Buildx
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226
+        uses: docker/setup-buildx-action@v3
+
+      # Paso 3: Iniciar sesión en el registro de GitHub Packages
       - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d
+        uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      # Paso 4: Extraer metadatos para la imagen Docker
       - name: Extract Docker metadata
         id: meta
-        uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
+      # Paso 5: Construir y subir la imagen Docker
       - name: Build and push Docker image
-        id: build-and-push
-        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
